fix: looks of header on mobile
* fix: looks of header on mobile

* fix: looks of header on different sizes

--- a/src/index.css
+++ b/src/index.css
@@ -35,8 +35,8 @@
 
 body {
   margin: 0;
-  min-width: 100vw;
-  min-height: 100vh;
+  min-width: 100svw;
+  min-height: 100svh;
   overflow: hidden;
 }
 
